[gd_scene load_steps=2 format=3 uid="uid://dscu8sblamdv1"]

[ext_resource type="Script" path="res://experience/gain.gd" id="1_ii6wo"]

[node name="gain" type="Node3D"]
script = ExtResource("1_ii6wo")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 256.0
offset_bottom = 256.0
size_flags_horizontal = 4
size_flags_vertical = 0
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 128.0
offset_bottom = 131.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="experience" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Experience"

[node name="return" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "return"

[node name="reading" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Read a book"
alignment = 0

[node name="health_potion" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Health Potion"
alignment = 0

[node name="Attack_training" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Attack training"
alignment = 0

[connection signal="pressed" from="VBoxContainer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/reading" to="." method="_on_reading_pressed"]
[connection signal="pressed" from="VBoxContainer/health_potion" to="." method="_on_health_potion_pressed"]
[connection signal="pressed" from="VBoxContainer/Attack_training" to="." method="_on_attack_training_pressed"]
